syntax = "proto3";

import "Protos/DomainTypes.proto";

option csharp_namespace = "TagTool.Backend";

package TagToolBackend;

service FileActionsService {
  rpc CanRenameFile (stream CanRenameFileRequest) returns (stream CanRenameFileReply);
  rpc RenameFile (RenameFileRequest) returns (RenameFileReply);
  rpc MoveFile (MoveFileRequest) returns (MoveFileReply);
}

message CanRenameFileRequest {
  Item item = 1;
  string newFileName = 2;
}

message CanRenameFileReply {
  Result result = 2;
}

message RenameFileRequest {
  Item item = 1;
  string newFileName = 2;
}

message RenameFileReply {
  Result result = 2;
}

message MoveFileRequest {
  Item item = 1;
  string destination = 2;
}

message MoveFileReply {
  oneof result {
    // New location of a moved file.
    string newLocation = 1;
    // The Error message.
    string errorMessage = 2;
  };
}


message DeleteAction {
  string what = 1;
}

message RenameAction {
  string what = 1;
}

message CutAction {
  string what = 1;
}

message PasteAction {
  string what = 1;
}

message OpenAction {
  string what = 1;
}

message TagChildren {
  string tagName = 1;
}
